welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: value or is not a member of Boolean
while (litMessage=="A"or litMessage=="B"){
                      ^