welcome.lessons.welcome.bdr.BDR.scala.code
while (litMessage=="A"or litMessage=="B"){
  recule(1)
}